test/compile-fail/import-recursive.as
import recursiveA from "./fixtures/recursive-a";
import recursiveB from "./fixtures/recursive-b";
